k8s/05-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: tanzu-simple
  namespace: tanzu-simple
spec:
  type: LoadBalancer
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: tanzu-simple
