k8s/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tanzu-simple
  labels: 
    app : tanzu-simple
  namespace: tanzu-simple
spec:
  rules:
  - host: www.fmartin.tech
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: tanzu-simple
            port:
              number: 80
